<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.administrador.ModificarEliminarRutaAdministrador">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistantsemibold"
            android:gravity="center"
            android:text="@string/txt_AgregarRuta"
            android:textSize="25sp"
            android:layout_marginTop="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistantsemibold"
            android:gravity="center"
            android:text="@string/txt_SeleccioneRuta"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinnerSelecRuta_FragmentModificarEliminarRuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:drawablePadding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistantsemibold"
            android:gravity="center"
            android:text="@string/txt_SeleccionarImagen"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagvi_FragmentModificarEliminarRuta"
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/banner_eliminable_nota_desarrollador" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_UrlImagen_FragmentModificarEliminarRuta"
                android:hint="@string/et_UrlImagen"
                android:fontFamily="@font/assistantsemibold"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_editar_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/assistantsemibold"
            android:gravity="center"
            android:text="@string/txt_SeleccioneCamionDeLaRuta"
            android:textSize="20sp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinnerSelecCamion_FragmentModificarEliminarRuta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:drawablePadding="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_NumeroRuta_FragmentModificarEliminarRuta"
                android:hint="@string/et_NumeroRuta"
                android:inputType="number"
                android:fontFamily="@font/assistantsemibold"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_editar_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_NombreCallePtoInicialRuta_FragmentModificarEliminarRuta"
                android:hint="@string/et_NombreCallePtoInicialRuta"
                android:inputType="textPersonName|textCapWords"
                android:fontFamily="@font/assistantsemibold"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_editar_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_LatitudPtoInicialRuta_FragmentModificarEliminarRuta"
                android:hint="@string/et_LatitudPtoInicialRuta"
                android:inputType="phone"
                android:fontFamily="@font/assistantsemibold"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_editar_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_LongitudPtoInicialRuta_FragmentModificarEliminarRuta"
                android:hint="@string/et_LongitudPtoInicialRuta"
                android:inputType="phone"
                android:fontFamily="@font/assistantsemibold"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_editar_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_NombreCallePtoFinalRuta_FragmentModificarEliminarRuta"
                android:hint="@string/et_NombreCallePtoFinalRuta"
                android:inputType="textPersonName|textCapWords"
                android:fontFamily="@font/assistantsemibold"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_editar_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_LatitudPtoFinalRuta_FragmentModificarEliminarRuta"
                android:hint="@string/et_LatitudPtoFinalRuta"
                android:inputType="phone"
                android:fontFamily="@font/assistantsemibold"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_editar_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_LongitudPtoFinalRuta_FragmentModificarEliminarRuta"
                android:hint="@string/et_LongitudPtoFinalRuta"
                android:inputType="phone"
                android:fontFamily="@font/assistantsemibold"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_editar_informacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_Modificar_FragmentModificarEliminarRuta"
            android:text="@string/btn_Modificar"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/assistantsemibold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_Eliminar_FragmentModificarEliminarRuta"
            android:text="@string/btn_Eliminar"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/assistantsemibold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>