<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragmentos.cliente.AgregarComentarioCliente">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistantsemibold"
        android:gravity="center"
        android:text="@string/txt_EnviarComentario"
        android:textSize="25sp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistantsemibold"
        android:gravity="center"
        android:text="@string/txt_IngreseComentarios"
        android:textSize="20sp"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etm_Fragment_ComentarioCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="150"
        android:padding="50dp"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistantsemibold"
        android:gravity="center"
        android:text="@string/txt_SeleccioneCategoriaComentario"
        android:textSize="20sp"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/spinner_FragmentCatComentarioCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/btn_Guardar_FragmentAgregarColonia"
        android:text="@string/btn_Enviar"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/assistantsemibold"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>